objects/TestObject3__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burger</fullName>
                </value>
                <value>
                    <fullName>Pizza</fullName>
                </value>
                <value>
                    <fullName>Kebab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>TestObject3</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObject2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObject3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>